--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,11 @@ html {
   margin-bottom: 0;
   color: #b0b0b0;
 }
+
+.planet-image {
+  width: 100%;
+  height: 160px;
+  object-fit: contain;
+  margin-bottom: 12px;
+  display: block;
+}
